--- a/Readme.org
+++ b/Readme.org
@@ -1,5 +1,10 @@
 #+TITLE: 七真年譜 / CK-KZ
 
 #+DATE: 2015-08-28 23:39:59.780880
-* 目次
+* 版本
+ |     CK-KZ|【重刊道藏輯要】|
+ |       HFL|【正統道藏・涵芬樓版】|
+ |      YP-C|【原版道藏輯要】|
+ |      ZTDZ|【正統道藏・三家本】|
+目次
  - [[file:KR5a0176_000.txt][七真年譜 0]]
